maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:4: error: not found: value aMurG
def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else {if (aMurG()) {if (estFaceMur()) {droite()} else {avance()} } }
                                                                                 ^