maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
def aMurD():Boolean = {var b =false;droite();b = estFaceMur();gauche();return b}


def garM() { if (aMurD()) {if (estFaceMur()) {gauche()} else avance()} else {if (aMurG()) {if (estFaceMur()) {droite()} else {avance()} } }
}


override def run() {while (!estSurBiscuit()) {garM()};prendBiscuit()}